--- a/src/sections/experience.css
+++ b/src/sections/experience.css
@@ -106,11 +106,20 @@
      
   }
 
+  #experienceHeader {
+  gap: var(--rtc-gap-s);
+  
+}
+
   .experienceButton {
   font-size: 1.8rem;
   }
-  #experienceContainer {
-  font-size: 1.5rem;
+  #experienceContainer  {
+  font-size: 1rem;
+  }
+
+  .jobsPlaceAndPeriod, .studiesPlaceAndPeriod {
+    font-size: 1rem;
   }
 
 }
